Add a launch logo and menu for a new game button

--- a/Newgame/app/src/main/res/values/strings.xml
+++ b/Newgame/app/src/main/res/values/strings.xml
@@ -74,4 +74,9 @@
 
     <string name="id_fmt">User ID: %s</string>
     <string name="email_fmt">Email: %s</string>
+    <string name="new_game">Новая игра</string>
+    <string name="new_field">Другое поле</string>
+    <string name="new_easy">Лёгкая</string>
+    <string name="new_medium">Средняя</string>
+    <string name="new_hard">Сложная</string>
 </resources>
