Change UI, add TimeHelper class and add popup menu
New game button, timer and menu replaced to the top of the screen. Menu contains settings, statistic and rules. TimeHelper is useful for conversion between milliseconds and string like hh:mm:ss, mm:ss

--- a/Newgame/app/src/main/res/values/strings.xml
+++ b/Newgame/app/src/main/res/values/strings.xml
@@ -79,4 +79,7 @@
     <string name="new_easy">Лёгкая</string>
     <string name="new_medium">Средняя</string>
     <string name="new_hard">Сложная</string>
+    <string name="settings">Настройки</string>
+    <string name="statistics">Статистика</string>
+    <string name="rules">Правила</string>
 </resources>
