--- a/Newgame/app/src/main/res/values/strings.xml
+++ b/Newgame/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="settings">Настройки</string>
     <string name="statistics">Статистика</string>
     <string name="rules">Правила</string>
+    <string name="repeat_game">Начать заново</string>
 </resources>
