--- a/Newgame/app/src/main/res/values/strings.xml
+++ b/Newgame/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="statistics">Статистика</string>
     <string name="rules">Правила</string>
     <string name="repeat_game">Начать заново</string>
+    <string name="history">История</string>
 </resources>
