--- a/Newgame/app/src/main/res/values/strings.xml
+++ b/Newgame/app/src/main/res/values/strings.xml
@@ -92,4 +92,20 @@
     <string name="win_game">Game wins:</string>
     <string name="best_time">Best time:</string>
     <string name="avg_time">Average time:</string>
+    <string name="start_demo">Press play button to start demo</string>
+    <string name="pen_info">\nUse it to set a value if you sure</string>
+    <string name="pencil_info">\nUse it to set possible values</string>
+    <string name="eraser_info">\nUse it to delete a value</string>
+    <string name="hint_info">\nUse it only when you have no idea and be ready to watch an ad :)</string>
+    <string name="undo_info">\nUse it to undo your previous choice</string>
+    <string name="button_info">\nOhh I forget. Use this buttons to place values</string>
+    <string name="new_game_but">Starting new game starts now\n</string>
+    <string name="timer">This guy will count time which you spend on gaming\n</string>
+    <string name="play_button">Use it to pause the game\n</string>
+    <string name="settings_button">Some additional settings, rules and leaderboards\n</string>
+    <string name="basic_pencil">Now we will set all possible values in the cells</string>
+    <string name="set_pen">Place a first pen value. It will highlight each area, row and column</string>
+    <string name="set_error">And what if we will place a wrong value? It will be highlighted</string>
+    <string name="fix_error">So let\'s fix it fast</string>
+    <string name="rest_game">Let\'s have a rest and enjoy rest of the game</string>
 </resources>
