--- a/Newgame/app/src/main/res/values/strings.xml
+++ b/Newgame/app/src/main/res/values/strings.xml
@@ -88,10 +88,10 @@
     <string name="leaderboard">Leaderboard</string>
     <string name="username">Username</string>
     <string name="time">Time</string>
-    <string name="num_game">Number of Games:</string>
-    <string name="win_game">Game wins:</string>
-    <string name="best_time">Best time:</string>
-    <string name="avg_time">Average time:</string>
+    <string name="num_game">Number of Games</string>
+    <string name="win_game">Game wins</string>
+    <string name="best_time">Best time</string>
+    <string name="avg_time">Average time</string>
     <string name="start_demo">Press play button to start demo</string>
     <string name="pen_info">\nUse it to set a value if you sure</string>
     <string name="pencil_info">\nUse it to set possible values</string>
@@ -110,10 +110,22 @@
     <string name="rest_game">Let\'s have a rest and enjoy rest of the game</string>
     <string name="dark_theme">Dark</string>
     <string name="light_theme">Light</string>
-    <string name="watch_demo">Watch demo game</string>
+    <string name="watch_demo"><u>Watch demo game</u></string>
     <string name="account_settings">Account</string>
     <string name="theme_settings">Theme</string>
     <string name="skip_login">Skip login</string>
     <string name="sign_on">On</string>
     <string name="sign_off">Off</string>
+    <string name="difficulty">Difficulty</string>
+    <string name="gratz">Congratulation</string>
+    <string name="text_rules">
+        <b><big>Game rules</big></b>\n\n
+        Game <i>field</i> of NxN size divided by N section, bounded by bold lines.\n\n
+        <b>The goal:</b>\n\n
+        Write numbers from 1 to N in cells. Numbers are located randomly but with only condition: number can not repeat in every <i>column, line and inside section</i>.\n
+        <b>Explanations:</b> Size of the section is N.
+    </string>
+    <string name="end_game">End of the game</string>
+    <string name="accept">Accept</string>
+    <string name="decline">Decline</string>
 </resources>
